fix overflow issue with footer
git-svn-id: https://svn.apache.org/repos/asf/comdev/reporter.apache.org/trunk@1799061 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/css/tabs.css
+++ b/site/css/tabs.css
@@ -24,7 +24,6 @@ a {
     width: 90%;
     max-width: 1600px;
     min-width: 1200px;
-    
     border-radius: 3px;
 }
 
@@ -72,9 +71,7 @@ a {
     
     margin: 0 auto;
     padding:8px;
-    
     width: calc(100% - 20px);
-    overflow: auto;
     background: #eee;
     text-align: left;
 }
